# Project-Raidline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  app.cpp  app.h  main.cpp  pyproject.toml  test_health.cpp  test_input_system.cpp  test_zombie.py  vcpkg.json  zombie_data.py
.github/workflows/: ci.yml
.prompts/art/: global_style_prefix.md  phase1_item_template.md
.prompts/art/named_firearms_pack_v1/: PRODUCTION_BRIEF.md  item_rifle_qbz95_1_v1_candidate_01.txt  item_rifle_qbz95_1_v1_candidate_02.txt  item_shotgun_m870_v1_candidate_01.txt  item_shotgun_m870_v1_candidate_02.txt
art/: ART_BIBLE.md  ART_PROGRESS.md  ASSET_MANIFEST.yaml  PRODUCTION_TASK_PROTOCOL.md  README.md
art/references/weapons/named_firearms_pack_v1/: REFERENCE_REGISTRY.json
art/reviews/batch_reports/: phase1_week13_16_acceptance.md  phase1_week13_16_qa.json  phase1_week13_16_qa.md
art/reviews/named_firearms_pack_v1/: acceptance.md  qa.json  qa.md
art/specs/: CHARACTER_LAYER_SPEC.md  ITEM_ART_SPEC.md  named_firearms_pack_v1.json  phase1_item_contracts.json  weapon_socket_contract.json
art/work/: phase1_selection.json
art/work/basic_weapons_pack_v1/: result.json
art/work/basic_weapons_pack_v1/prompts/: item_pistol_basic_v1_candidate_01.txt  item_pistol_basic_v1_candidate_02.txt  item_rifle_basic_v1_candidate_01.txt  item_rifle_basic_v1_candidate_02.txt
art/work/consumables_pack_v1/: result.json
art/work/consumables_pack_v1/item_cola_basic_v1/prompts/: candidate_a.txt  candidate_b.txt
art/work/consumables_pack_v1/item_medkit_basic_v1/prompts/: candidate_a.txt  candidate_b.txt
art/work/named_firearms_pack_v1_retry/: result.json  selection.json
art/work/named_firearms_pack_v1_retry/prompts/: item_pistol_qsz92g_v1_candidate_01.txt  item_pistol_qsz92g_v1_candidate_02.txt
ci/: install_ubuntu_sdl3_deps.sh
doc/: DevLog_Week1.md  DevLog_Week10.md  DevLog_Week11.md  DevLog_Week12.md  DevLog_Week13.md  DevLog_Week14.md  DevLog_Week15.md  DevLog_Week15_Final_Status.md  DevLog_Week16.md  DevLog_Week2.md  DevLog_Week3.md  DevLog_Week4.md  DevLog_Week5.md  DevLog_Week6.md  DevLog_Week7.md  DevLog_Week8.md  DevLog_Week9.md
src/: animation.cpp  animation.h  app.cpp  app.h  collision.cpp  collision.h  enemy.cpp  enemy.h  gameplay_input.h  gameplay_world.cpp  gameplay_world.h  grid_inventory.cpp  grid_inventory.h  ground_item.cpp  ground_item.h  health_system.h  hit_effect.cpp  hit_effect.h  hit_resolution.cpp  hit_resolution.h  input_system.cpp  input_system.h  inventory_interaction.cpp  inventory_interaction.h  item_definition.cpp  item_definition.h  item_instance.cpp  item_instance.h  main.cpp  particle.cpp  particle.h  particle_system.cpp  particle_system.h  player.cpp  player.h  projectile.cpp  projectile.h  rect.h  test_grid_inventory.cpp  texture.cpp  (+2 more)
tests/: test_animation.cpp  test_collision.cpp  test_enemy.cpp  test_gameplay_world.cpp  test_grid_inventory.cpp  test_ground_item.cpp  test_health.cpp  test_hit_effect.cpp  test_hit_resolution.cpp  test_input_system.cpp  test_inventory_interaction.cpp  test_item_definition.cpp  test_item_instance.cpp  test_particle.cpp  test_particle_system.cpp  test_phase1_assets.py  test_player.cpp  test_projectile.cpp  test_texture.cpp
tools/: __init__.py
tools/art_pipeline/: __init__.py  named_firearms_assets.py  phase1_assets.py
